--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
     <string name="app_name">viewgithub</string>
     <string name="help">Help</string>
+    <string name="ok">Ok</string>
+
+    <string name="validation_rule_title">Validation Rules</string>
+    <string name="validation_rule">
+        1.Email address should be in a valid standard email format \n\n
+        2. Password must be at least 9 characters long with at least
+        1 uppercase character, 1 lowercase character, and 1 number.
+    </string>
 
     <!--error message-->
     <string name="invalid_email">invalid email input</string>
